feat: Add packaging and release automation
- Add build-packages.sh script for cross-platform builds
- Add install scripts for Linux, Windows, and macOS
- Add GitHub Actions workflows for CI/CD and releases
- Add create-release.sh script for easy release management
- Update README.md with package installation instructions
- Update .gitignore to exclude build artifacts and packages

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ Thumbs.db
 # Build directories
 build/
 dist/
+packages/
+
+# Release artifacts
+interactive-feedback-mcp
+interactive-feedback-mcp-*
+
+# GitHub Actions artifacts
+.github/workflows/artifacts/
