--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
           
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgl1-mesa-dev libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libglfw3-dev pkg-config
+        
+    - name: Install Go dependencies
       run: go mod download
       
     - name: Run tests
